--- a/less/main.less
+++ b/less/main.less
@@ -10,17 +10,25 @@
   overflow: hidden;
 }
 
-// background arc
-.gauge:before {
+// container for rotating gauge meter
+.gauge__meter {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  animation: gauge__animation 1s forwards;
+  transform-origin: center bottom;
+}
+
+.gauge__arc {
   content: '';
-  background: lightgrey;
   position: absolute;
   height: 200%;
   width: 100%;
   border-radius: 50%;
 }
 
-// foreground arc (cut out)
+// cut out
 .gauge:after {
   content: '';
   background: white;
@@ -32,24 +40,14 @@
   border-radius: 50%;
 }
 
-// container for rotating gauge meter
-.gauge__meter {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  animation: gauge__animation 1s forwards;
-  transform-origin: center bottom;
+// background arc
+.gauge:before:extend(.gauge__arc) {
+  background: lightgrey;
 }
 
 // gauge meter arc
-.gauge__meter:before {
-  content: '';
+.gauge__meter:before:extend(.gauge__arc) {
   background: red;
-  position: absolute;
-  height: 200%;
-  width: 100%;
-  border-radius: 50%;
 }
 
 @keyframes gauge__animation {
