--- a/less/_gauge-list.less
+++ b/less/_gauge-list.less
@@ -4,21 +4,27 @@
 // -------------------------------------------------------
 
 .gauge-list {
-  margin: 0;
+  margin: 22px 0;
   padding: 0;
 }
 
 .gauge-item {
   background: @grey-light;
   overflow: hidden;
-  margin: 2px 0;
+  margin: 1px 0;
   padding: 22px;
   list-style: none;
   color: @grey-dark;
+
+  &:last-of-type {
+    border-bottom: 1px solid @grey;
+    margin-bottom: 15px;
+  }
 }
 
 .gauge-item__thumbnail {
   width: 66%;
+  max-width: 180px;
   margin-bottom: 22px;
 }
 
@@ -31,13 +37,17 @@
 .gauge-item__title {
   margin: 0;
   padding: 0;
-  font-size: 22px;
+  font-size: 20px;
   line-height: 1.3;
 }
 
 .gauge-item__description {
   margin: 0;
   padding: 0;
+}
+
+.gauge-item__content--inline {
+  margin-left: 120px;
 }
 
 .gauge-item__status--15 {
