Adjust margin/padding to better fit into the correctiv.org layout.

--- a/less/_gauge-list.less
+++ b/less/_gauge-list.less
@@ -5,14 +5,14 @@
 // -------------------------------------------------------
 
 .gauge-list {
-  margin: @margin 0;
+  margin: @margin 0 @margin * 2;
   padding: 0;
 }
 
 .gauge-item {
   background: @grey-light;
   overflow: hidden;
-  margin: 1px 0;
+  margin: 2px 0 0 0;
   padding: @margin;
   list-style: none;
   color: @grey-dark;
