Fix a minor styling issue: focus styles.

--- a/less/_gauge-list.less
+++ b/less/_gauge-list.less
@@ -38,6 +38,7 @@
   transition: background 300ms;
 
   &:hover,
+  &:focus,
   &:active {
     text-decoration: none;
     background: lighten(@grey-light, 2%);
