Fix issues with animations not working in Firefox.
Print animation names without quotes, otherwise they are ignored in Firefox.

--- a/less/_gauge.less
+++ b/less/_gauge.less
@@ -13,7 +13,7 @@
 }
 
 .gauge__meter--state(@value, @color) {
-  @animation-name: 'gauge__animation--@{value}';
+  @animation-name: ~"gauge-rotate-@{value}";
 
   // Animation declaration
   @keyframes @animation-name {
